--- a/github-battle/app/index.css
+++ b/github-battle/app/index.css
@@ -119,14 +119,6 @@ li {
 }
 
 .instructions-container {
-  margin: 100px;
-}
-
-.container-sm {
-  width: 80%;
-}
-
-.instructions-container {
   margin: 100px 0;
 }
 
@@ -178,11 +170,11 @@ li {
   flex: 2;
   border-radius: 3px;
   border: none;
-  box-shadow: inset 0 1px 2px rgba(0,0,0,0.15);
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.15);
 }
 
 .player-inputs .input-light {
-  background: rgba(0,0,0,0.02);
+  background: rgba(0, 0, 0, 0.02);
 }
 
 .player-inputs button {
@@ -213,4 +205,8 @@ li {
 .dark-btn:disabled {
   background: #f2f2f2;
   color: #c7c7c7;
+}
+
+.players-container {
+  margin: 100px 0;
 }
